# cfg-tmux

./: .gitignore  README.md
home/: .tmux.conf
home/.bash/aliases/: tmux
home/.config/shell_sourced/: tmux
home/.config/tmux/: settings.conf  solarized-dark.conf  solarized-light.conf  tmux-dark.conf  tmux-light.conf
home/.local/sysstats/: sysstats.sh
home/.local/sysstats/lib/: display.sh
home/.sourced/: tmux
home/.tmux/: settings.conf  solarized-dark.conf  solarized-light.conf  sysstats.sh  tmd.sh  tmux-dark.conf  tmux-light.conf
home/.tmux/rsysstats/: Cargo.toml
home/.tmux/rsysstats/src/: main.rs
home/.tmux/sysstats/: sysstats.sh  tmd.sh
home/.tmux/sysstats/lib/: display.sh  tmux.sh
rsysstats/src/: main.rs
