[package]
name = "rsysstats"
version = "0.1.0"
authors = ["agvim <agvim@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# some optimizations for binary size
# strip = true # only on nightly, use cargo strip on stable
lto = true # optimize at link stage (remove dead code)
panic = "abort" # remove backtrace code
